syntax = "proto3";

option java_package = "cn.migu.selection.proto.base";

message HorizontalContentResponse{
	string pluginCode = 1;
	string status = 2;
	string isvisable = 3;
	HorizontalContentData data = 4;
	string messageDesc = 5;
	
}

message HorizontalContentData{
	string type = 1;//展示样式，如为1，展示样式一；如为2，展示样式二
	int32 totalNum = 2;//本页总图书数目
	string isShowLine = 3;//底部是否展示横线
	repeated HorizontalContentBooks books = 4;//展示图书
	map<string, string> ctag = 5;
	string showType = 6;//展示类型:1、书名，2、书名+作者名，3、书名+点击量
	string isShowYF = 7;//展示腰封类型:0、无，2、蓝色，3、红色，4、绿色
	string isPaddingTop = 8;//展示上边框1:是;2:否,默认1
	string isMarginTop = 9;
	string isMarginBottom = 10;
}

message HorizontalContentBooks{
	string bookShowName = 1; //图书名称
	string authorName = 2;//图书作者
	string bookCoverLogo = 3;//图书封面
	string bookDetailUrl = 4;//图书链接地址
	string bookClickDesc = 5;//图书点击量描述
	string cornerShowType = 6;//图书展示的角标: 0:无;1:免费;2:限免;3:会员;4:完本;5
}
